[Desafio LuizaLabs - Quake3] - Mudanca pom.xml para executar IT, arquivo para it, configuracoes custons no properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} 
 logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 logging.file=src/main/resources/logs/app.log
+
+server.port = 8080
+
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
